[project]
name = "pyeyesim"
version = "0.4.0"
requires-python = ">=3.8"
authors = [
  { name="Jozsef Arato", email="jozsef.arato@gmail.com" },
]
description = "Eye movement analysis and visualization package, with a focus on fixation map and scanpath similarity"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3"]

dependencies = [
  "numpy==1.26",
  "scipy",
  "pandas",
  "scikit-image",
  "matplotlib",
  "sympy"
]


[project.urls]
Homepage = "https://github.com/jozsarato/PyEyeSim"
Issues = "https://github.com/jozsarato/PyEyeSim/issues"
